log/build_2025-02-16_15-58-15/gs_package/stderr.log
  File "/home/tomasz/Desktop/sese_ws/install/gs_package/lib/python3.12/site-packages/gs_package/gs_batt_pub.py", line 59
    self.get_logger().info('Publishing: "%d"' % msg.text
                          ^
SyntaxError: '(' was never closed

